field-test/results/0.3.0/docker/docker-test-report.md
# Docker Field Test Report — v0.3.0

**Result:** 157 passed, 2 failed, 0 skipped (exit status 1)

| Test | Outcome | Duration (s) |
|------|---------|--------------|
| `tests/field/test_docker_build.py::test_docker_help` | passed | 0.186 |
| `tests/field/test_docker_build.py::test_docker_image_builds` | passed | 0.513 |
| `tests/field/test_docker_build.py::test_docker_import` | passed | 0.149 |
| `tests/field/test_docker_build.py::test_docker_pip_show` | passed | 0.208 |
| `tests/field/test_docker_build.py::test_docker_version` | passed | 0.328 |
| `tests/field/test_docker_cli.py::test_cli_audit` | passed | 0.079 |
| `tests/field/test_docker_cli.py::test_cli_config` | passed | 0.077 |
| `tests/field/test_docker_cli.py::test_cli_conflicts` | passed | 0.077 |
| `tests/field/test_docker_cli.py::test_cli_counterfactual` | passed | 0.079 |
| `tests/field/test_docker_cli.py::test_cli_diff` | passed | 0.078 |
| `tests/field/test_docker_cli.py::test_cli_explain` | passed | 0.078 |
| `tests/field/test_docker_cli.py::test_cli_extract_dry_run` | passed | 0.078 |
| `tests/field/test_docker_cli.py::test_cli_health` | passed | 0.082 |
| `tests/field/test_docker_cli.py::test_cli_history` | passed | 0.08 |
| `tests/field/test_docker_cli.py::test_cli_init` | passed | 0.099 |
| `tests/field/test_docker_cli.py::test_cli_inject` | passed | 0.137 |
| `tests/field/test_docker_cli.py::test_cli_list` | passed | 0.079 |
| `tests/field/test_docker_cli.py::test_cli_metrics` | passed | 0.082 |
| `tests/field/test_docker_cli.py::test_cli_pack_info` | passed | 0.294 |
| `tests/field/test_docker_cli.py::test_cli_pack_list` | passed | 0.289 |
| `tests/field/test_docker_cli.py::test_cli_promote` | passed | 0.078 |
| `tests/field/test_docker_cli.py::test_cli_report` | passed | 0.078 |
| `tests/field/test_docker_cli.py::test_cli_retire` | passed | 0.146 |
| `tests/field/test_docker_cli.py::test_cli_search` | passed | 0.135 |
| `tests/field/test_docker_cli.py::test_cli_show` | passed | 0.079 |
| `tests/field/test_docker_cli.py::test_cli_story` | passed | 0.079 |
| `tests/field/test_docker_cli.py::test_cli_test` | passed | 0.177 |
| `tests/field/test_docker_cli.py::test_cli_validate` | passed | 0.078 |
| `tests/field/test_docker_compose.py::test_compose_all_services` | passed | 0.037 |
| `tests/field/test_docker_compose.py::test_compose_clean_shutdown` | passed | 0.221 |
| `tests/field/test_docker_compose.py::test_compose_mcp_accepts` | failed | 181.549 |
| `tests/field/test_docker_compose.py::test_compose_start_demo` | passed | 1.0 |
| `tests/field/test_docker_compose.py::test_compose_test_passes` | failed | 64.6 |
| `tests/field/test_docker_export_import.py::test_export_active_only` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_agents_md` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_aider` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_claude_md` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_cursorrules` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_include_retired` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_json` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_markdown` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_export_windsurf` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_import_agents_md` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_import_chat_history` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_import_claude_md` | passed | 0.0 |
| `tests/field/test_docker_export_import.py::test_import_cursorrules` | passed | 0.0 |
| `tests/field/test_docker_git.py::test_git_init` | passed | 0.017 |
| `tests/field/test_docker_git.py::test_hash_matches_git` | passed | 0.076 |
| `tests/field/test_docker_git.py::test_hash_not_uuid` | passed | 0.075 |
| `tests/field/test_docker_git.py::test_history_timeline` | passed | 0.141 |
| `tests/field/test_docker_git.py::test_promote_creates_commit` | passed | 0.065 |
| `tests/field/test_docker_git.py::test_retire_creates_commit` | passed | 0.251 |
| `tests/field/test_docker_git.py::test_rollback` | passed | 0.091 |
| `tests/field/test_docker_git.py::test_rollback_restores` | passed | 0.106 |
| `tests/field/test_docker_git.py::test_validate_after_rollback` | passed | 0.156 |
| `tests/field/test_docker_git.py::test_yaml_has_real_hash` | passed | 0.075 |
| `tests/field/test_docker_loop.py::test_loop_all_stages_execute` | passed | 0.002 |
| `tests/field/test_docker_loop.py::test_loop_creates_git_commit` | passed | 0.117 |
| `tests/field/test_docker_loop.py::test_loop_creates_rule_file` | passed | 0.114 |
| `tests/field/test_docker_loop.py::test_loop_empty_trajectory` | passed | 0.0 |
| `tests/field/test_docker_loop.py::test_loop_no_lesson` | passed | 0.0 |
| `tests/field/test_docker_loop.py::test_loop_returns_rule_id` | passed | 0.0 |
| `tests/field/test_docker_mcp.py::test_get_matching_rules` | passed | 0.001 |
| `tests/field/test_docker_mcp.py::test_get_matching_rules_empty_task` | passed | 0.001 |
| `tests/field/test_docker_mcp.py::test_get_rule` | passed | 0.001 |
| `tests/field/test_docker_mcp.py::test_get_rule_missing` | passed | 0.0 |
| `tests/field/test_docker_mcp.py::test_list_rules` | passed | 0.001 |
| `tests/field/test_docker_mcp.py::test_list_rules_no_store` | passed | 0.0 |
| `tests/field/test_docker_mcp.py::test_list_rules_status_filter` | passed | 0.001 |
| `tests/field/test_docker_mcp.py::test_mcp_server_command_registered` | passed | 0.01 |
| `tests/field/test_docker_mcp.py::test_report_failure` | passed | 0.0 |
| `tests/field/test_docker_mcp.py::test_report_failure_invalid_json` | passed | 0.0 |
| `tests/field/test_docker_multienv.py::test_build_py311` | passed | 18.598 |
| `tests/field/test_docker_multienv.py::test_build_py312` | passed | 16.087 |
| `tests/field/test_docker_multienv.py::test_build_py313` | passed | 18.663 |
| `tests/field/test_docker_multienv.py::test_py311_tests_pass` | passed | 4.06 |
| `tests/field/test_docker_multienv.py::test_py312_tests_pass` | passed | 5.417 |
| `tests/field/test_docker_multienv.py::test_py313_tests_pass` | passed | 4.417 |
| `tests/field/test_docker_pipeline.py::test_pipeline_extract_dry_run` | passed | 0.2 |
| `tests/field/test_docker_pipeline.py::test_pipeline_hash_check` | passed | 0.001 |
| `tests/field/test_docker_pipeline.py::test_pipeline_health` | passed | 0.218 |
| `tests/field/test_docker_pipeline.py::test_pipeline_init` | passed | 0.214 |
| `tests/field/test_docker_pipeline.py::test_pipeline_inject` | passed | 0.196 |
| `tests/field/test_docker_pipeline.py::test_pipeline_list` | passed | 0.207 |
| `tests/field/test_docker_pipeline.py::test_pipeline_promote` | passed | 0.2 |
| `tests/field/test_docker_pipeline.py::test_pipeline_show` | passed | 0.22 |
| `tests/field/test_docker_pipeline.py::test_pipeline_test` | passed | 0.217 |
| `tests/field/test_docker_pipeline.py::test_pipeline_validate` | passed | 0.221 |
| `tests/field/test_docker_redaction.py::test_api_key_redacted` | passed | 0.0 |
| `tests/field/test_docker_redaction.py::test_export_no_secrets` | passed | 0.0 |
| `tests/field/test_docker_redaction.py::test_password_redacted` | passed | 0.0 |
| `tests/field/test_docker_redaction.py::test_redacted_flag_set` | passed | 0.0 |
| `tests/field/test_docker_redaction.py::test_token_redacted` | passed | 0.0 |
| `tests/field/test_docker_redaction.py::test_watch_decorator_redacts` | passed | 0.001 |
| `tests/field/test_docker_tui.py::test_annotation_screen` | passed | 0.131 |
| `tests/field/test_docker_tui.py::test_approve_promotes` | passed | 0.128 |
| `tests/field/test_docker_tui.py::test_batch_review` | passed | 0.135 |
| `tests/field/test_docker_tui.py::test_candidates_load` | passed | 0.002 |
| `tests/field/test_docker_tui.py::test_confidence_cards_render` | passed | 0.046 |
| `tests/field/test_docker_tui.py::test_evidence_cards_render` | passed | 0.069 |
| `tests/field/test_docker_tui.py::test_filter_by_tag` | passed | 0.0 |
| `tests/field/test_docker_tui.py::test_keybindings` | passed | 0.047 |
| `tests/field/test_docker_tui.py::test_reject_advances` | passed | 0.125 |
| `tests/field/test_docker_tui.py::test_review_screen_mounts` | passed | 0.161 |
| `tests/field/test_docker_v020_cli.py::test_cli_frontier` | passed | 0.08 |
| `tests/field/test_docker_v020_cli.py::test_cli_gaps` | passed | 0.08 |
| `tests/field/test_docker_v020_cli.py::test_cli_harness_health_fail` | passed | 0.079 |
| `tests/field/test_docker_v020_cli.py::test_cli_harness_health_pass` | passed | 0.078 |
| `tests/field/test_docker_v020_cli.py::test_cli_inject_records_hits` | passed | 0.141 |
| `tests/field/test_docker_v020_cli.py::test_cli_journal` | passed | 0.079 |
| `tests/field/test_docker_v020_cli.py::test_cli_leaderboard` | passed | 0.08 |
| `tests/field/test_docker_v020_cli.py::test_cli_metrics_by_domain` | passed | 0.08 |
| `tests/field/test_docker_v020_cli.py::test_cli_metrics_coverage` | passed | 0.081 |
| `tests/field/test_docker_v020_cli.py::test_cli_preflight_no_corpus` | passed | 0.085 |
| `tests/field/test_docker_v020_cli.py::test_cli_preflight_with_corpus` | passed | 0.084 |
| `tests/field/test_docker_v020_cli.py::test_cli_report_monthly` | passed | 0.078 |
| `tests/field/test_docker_v020_cli.py::test_cli_review_batch_json` | passed | 0.08 |
| `tests/field/test_docker_v020_cli.py::test_cli_review_filter_json` | passed | 0.08 |
| `tests/field/test_docker_v020_cli.py::test_cli_show_hits` | passed | 0.079 |
| `tests/field/test_docker_v020_metrics.py::test_cli_help_under_500ms` | passed | 0.081 |
| `tests/field/test_docker_v020_metrics.py::test_cli_version_under_500ms` | passed | 0.08 |
| `tests/field/test_docker_v020_metrics.py::test_demo_completes_under_60s_and_walkthrough` | passed | 0.078 |
| `tests/field/test_docker_v020_metrics.py::test_harness_health_reports_metrics` | passed | 0.078 |
| `tests/field/test_docker_v020_metrics.py::test_inject_records_hits_metric` | passed | 0.138 |
| `tests/field/test_docker_v020_metrics.py::test_metrics_coverage_returns_score` | passed | 0.08 |
| `tests/field/test_docker_v020_metrics.py::test_preflight_runs_under_30s` | passed | 0.078 |
| `tests/field/test_docker_v020_metrics.py::test_review_batch_json_valid_queue` | passed | 0.079 |
| `tests/field/test_docker_v030.py::test_docker_adapter_import` | passed | 0.184 |
| `tests/field/test_docker_v030.py::test_docker_badge` | passed | 0.294 |
| `tests/field/test_docker_v030.py::test_docker_benchmark_cli` | passed | 4.794 |
| `tests/field/test_docker_v030.py::test_docker_benchmark_compare` | passed | 4.733 |
| `tests/field/test_docker_v030.py::test_docker_build_hardening` | passed | 16.288 |
| `tests/field/test_docker_v030.py::test_docker_cli_smoke` | passed | 0.406 |
| `tests/field/test_docker_v030.py::test_docker_compose_config` | passed | 0.12 |
| `tests/field/test_docker_v030.py::test_docker_corpus_cli` | passed | 0.644 |
| `tests/field/test_docker_v030.py::test_docker_corpus_export_csv_content` | passed | 0.34 |
| `tests/field/test_docker_v030.py::test_docker_extract_test_promote` | passed | 0.267 |
| `tests/field/test_docker_v030.py::test_docker_image_size` | passed | 0.024 |
| `tests/field/test_docker_v030.py::test_docker_lifecycle` | passed | 0.295 |
| `tests/field/test_docker_v030.py::test_docker_mcp_http_auth` | passed | 0.804 |
| `tests/field/test_docker_v030.py::test_docker_mcp_http_schema_and_rate_limit` | passed | 0.836 |
| `tests/field/test_docker_v030.py::test_docker_mcp_stdio` | passed | 0.437 |
| `tests/field/test_docker_v030.py::test_docker_multi_arch` | passed | 0.051 |
| `tests/field/test_docker_v030.py::test_docker_network_isolated` | passed | 0.158 |
| `tests/field/test_docker_v030.py::test_docker_otel_emit` | passed | 0.404 |
| `tests/field/test_docker_v030.py::test_docker_pack_create` | passed | 0.236 |
| `tests/field/test_docker_v030.py::test_docker_pack_install` | passed | 0.457 |
| `tests/field/test_docker_v030.py::test_docker_pack_persistence` | passed | 0.387 |
| `tests/field/test_docker_v030.py::test_docker_pipeline_git_commit` | passed | 0.411 |
| `tests/field/test_docker_v030.py::test_docker_preflight` | passed | 0.2 |
| `tests/field/test_docker_v030.py::test_docker_preflight_max_cost` | passed | 0.414 |
| `tests/field/test_docker_v030.py::test_docker_resource_limits` | passed | 0.203 |
| `tests/field/test_docker_v030.py::test_docker_rules_persistence` | passed | 0.277 |
| `tests/field/test_docker_v030.py::test_docker_webhook` | passed | 0.274 |
| `tests/field/test_docker_v030.py::test_docker_webhook_cli` | passed | 0.342 |
| `tests/mcp/test_docker_http_transport.py::test_docker_http_call_tools_valid` | passed | 0.032 |
| `tests/mcp/test_docker_http_transport.py::test_docker_http_invalid_args_schema_error` | passed | 0.019 |
| `tests/mcp/test_docker_http_transport.py::test_docker_http_tools_listed` | passed | 0.017 |
| `tests/mcp/test_docker_http_transport.py::test_docker_http_unknown_tool_no_traceback` | passed | 0.018 |
